[package]
name = "no-openssl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
log = "0.4.18"
notify = "6.0.0"
rand = "0.8.5"
simple_logger = { version = "4.1.0", features = ["threads"] }
tempfile = "3.5.0"
